tests/sksl/errors/LayoutInInterfaceBlock.glsl
### Compilation failed:

error: 4: layout qualifier 'binding' is not permitted here
    layout(binding=1) A y;  // Not allowed
    ^^^^^^^^^^^^^^^^^
error: 5: layout qualifier 'set' is not permitted here
    layout(set=0) A z;      // Not allowed
    ^^^^^^^^^^^^^
2 errors
